[gd_scene load_steps=5 format=3 uid="uid://srpe4wpg3wxv"]

[ext_resource type="Script" uid="uid://cs0uniqv25jbv" path="res://items/equippable/throwable/grenades/thermal_detonator/thermal_detonator.gd" id="1_roo7k"]
[ext_resource type="PackedScene" uid="uid://btv3egoi1aug5" path="res://assets/items/throwables/thermal_detonator.blend" id="2_fbxyk"]

[sub_resource type="SphereShape3D" id="SphereShape3D_5kbvj"]
radius = 0.2

[sub_resource type="SphereShape3D" id="SphereShape3D_fbxyk"]

[node name="ThermalDetonator" type="RigidBody3D"]
collision_layer = 0
collision_mask = 3
linear_damp = 0.4
angular_damp = 0.4
script = ExtResource("1_roo7k")

[node name="thermal_detonator" parent="." instance=ExtResource("2_fbxyk")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_5kbvj")

[node name="DetectionArea" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="DetectionArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0)
shape = SubResource("SphereShape3D_fbxyk")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
